change in image

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
    </h1>
   <div class="grid-containers">
     <div class="item1">
-      <img class="img2" src="image/the-wolf-howling-illustration-silhouette-of-wolf-vector-removebg-preview.png">
+      <img class="img2" src="image/image.png">
     </div>
     <div class="item2">
       <p class="aboutme" id="textToConvert">
