--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="item1">
       <img class="img2" src="image/image.png">
     </div>
-    <div class="item2">
+    <div class="item2" style="margin-right:10px;">
       <p class="aboutme" id="textToConvert">
       I am Abiral Shrestha, a passionate and dedicated web developer with a strong background in both front-end and back-end development. I specialize in creating responsive, user-friendly websites that are optimized for speed, accessibility, and search engines. With over 1 years of experience in the industry, I have worked with a wide range of clients, from small startups to large corporations, and have delivered high-quality solutions that exceed their expectation
   
