--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ justify-content: center;">
     <div class="card fill-orange" data-card="0">
       <div class="card__icon" data-icon=""><img src="image/nfc.jpeg"> </div>
       <!-- <div class="card__detail">NFC Tag</div> -->
-      <div class="card__detail">Create NFC tag for your product and help you to manage it easily@just 90/-.</div>
+      <div class="card__detail">Create NFC tag for your product and help you to manage</div>
     </div>
     <div class="card fill-blue" data-card="1">
       <div class="card__icon"" data-icon=""><img src="image/customqr.png"> </div>
